--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gotohead",
+  "name": "grunt-contrib-gotohead",
   "description": "Get a css snippet and put into the style tag on head of HTML document.",
-  "version": "0.1.0",
-  "homepage": "belchiorso.com.br/projetos/gotohead",
+  "version": "1.0.0",
+  "homepage": "https://github.com/belchior/gotohead",
   "author": {
     "name": "Belchior Oliveira",
     "email": "belchiorso@gmail.com",
@@ -11,9 +11,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:belchior/gotohead.git"
-  },
-  "bugs": {
-    "url": ""
   },
   "licenses": [
     {
@@ -27,6 +24,9 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies":{
+    "clean-css": "~2.x"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
@@ -37,6 +37,6 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin", "performance"
+    "gruntplugin", "performance", "css", "front-end"
   ]
 }
