bug fix in jade compatibility

--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "grunt-contrib-gotohead",
-  "description": "Get a css snippet and put into the style tag on head of HTML document.",
-  "version": "1.0.0",
-  "homepage": "https://github.com/belchior/gotohead",
-  "author": {
-    "name": "Belchior Oliveira",
-    "email": "belchiorso@gmail.com",
-    "url": "belchiorso.com.br"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:belchior/gotohead.git"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "gotohead/blob/master/LICENSE-MIT"
-    }
-  ],
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
-  "dependencies":{
-    "clean-css": "~2.x"
-  },
-  "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
-  },
-  "peerDependencies": {
-    "grunt": "~0.4.5"
-  },
-  "keywords": [
-    "gruntplugin", "performance", "css", "front-end"
-  ]
+   "name": "grunt-contrib-gotohead",
+   "description": "Get a css snippet and put into the style tag on head of HTML document.",
+   "version": "1.0.1",
+   "homepage": "https://github.com/belchior/gotohead",
+   "author": {
+      "name": "Belchior Oliveira",
+      "email": "belchiorso@gmail.com",
+      "url": "belchiorso.com.br"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git@github.com:belchior/gotohead.git"
+   },
+   "bugs": {
+      "url": "https://github.com/belchior/gotohead/issues"
+   },
+   "licenses": [
+      {
+         "type": "MIT",
+         "url": "gotohead/blob/master/LICENSE-MIT"
+      }
+   ],
+   "engines": {
+      "node": ">= 0.8.0"
+   },
+   "scripts": {
+      "test": "grunt test"
+   },
+   "dependencies":{
+      "clean-css": "~2.x"
+   },
+   "devDependencies": {
+      "grunt-contrib-jshint": "^0.9.2",
+      "grunt-contrib-clean": "^0.5.0",
+      "grunt-contrib-nodeunit": "^0.3.3",
+      "grunt": "~0.4.5"
+   },
+   "peerDependencies": {
+      "grunt": "~0.4.5"
+   },
+   "keywords": [
+      "gruntplugin", "performance", "css", "front-end"
+   ]
 }
